# images-processor

./: CMakeLists.txt  README.md  basic.frag  blur.frag  gl_widget.cpp  gl_widget.h  grayscale.frag  image_renderer.cpp  image_renderer.h  images-processor.pro  main.cpp  main_window.cpp  main_window.h  main_window.ui  mirror.frag  negative.frag  night_vision.frag  sobel.frag  webcam_reader.cpp  webcam_reader.h
